force-app/main/default/objects/Wallet__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bitcoin</fullName>
            </value>
            <value>
                <fullName>Ethereum</fullName>
            </value>
            <value>
                <fullName>Tron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>