force-app/main/default/objects/Wallet__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTC</fullName>
            </value>
            <value>
                <fullName>ETH</fullName>
            </value>
            <value>
                <fullName>USDT</fullName>
            </value>
            <value>
                <fullName>USDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>